--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,6 @@ xcuserdata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,macos,swift,swiftpm,swiftpackagemanager
+
+# output
+data.json
